<resources>
    <string name="app_name">Mynewsapp</string>
    <string name="top">Top</string>
    <string name="tech">Tech</string>
    <string name="sports">Sports</string>
    <string name="business">Business</string>
    <string name="ent">Entertainment</string>
    <string name="sci">Science</string>
    <string name="health">Health</string>
    <string name="img_description">News banner image</string>
    <string name="tech_string">technology</string>
    <string name="entertainment">entertainment</string>
    <string name="science">science</string>
    <string name="health_text">health</string>
    <string name="busi">business</string>
    <string name="sport">sports</string>
</resources>