<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="vm"
            type="com.example.mynewsapp.ui.ViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_entertainment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/ent"
                app:cornerRadius="20dp"
                android:fontFamily="@font/gilroy_semi_bold"
                app:backgroundTint="@color/teal_200"
                term="@{@string/entertainment}"
                viewModel="@{vm}"
                app:layout_constraintStart_toEndOf="@id/btn_business"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_science"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sci"
                app:cornerRadius="20dp"
                app:backgroundTint="@color/teal_200"
                android:layout_marginStart="16dp"
                viewModel="@{vm}"
                term="@{@string/science}"
                android:fontFamily="@font/gilroy_semi_bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_entertainment"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health"
                app:cornerRadius="20dp"
                app:backgroundTint="@color/teal_200"
                android:layout_marginStart="16dp"
                term="@{@string/health_text}"
                viewModel="@{vm}"
                android:fontFamily="@font/gilroy_semi_bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_science"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/business"
                app:cornerRadius="20dp"
                term="@{@string/busi}"
                viewModel="@{vm}"
                android:fontFamily="@font/gilroy_semi_bold"
                app:backgroundTint="@color/teal_200"
                app:layout_constraintStart_toEndOf="@id/btn_sports"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/sports"
                app:cornerRadius="20dp"
                term="@{@string/sport}"
                viewModel="@{vm}"
                android:fontFamily="@font/gilroy_semi_bold"
                app:backgroundTint="@color/teal_200"
                app:layout_constraintStart_toEndOf="@+id/btn_tech"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_tech"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="1dp"
                android:text="@string/tech"
                app:cornerRadius="20dp"
                term="@{@string/tech_string}"
                viewModel="@{vm}"
                android:fontFamily="@font/gilroy_semi_bold"
                app:backgroundTint="@color/teal_200"
                app:layout_constraintStart_toEndOf="@+id/btn_top"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top"
                android:fontFamily="@font/gilroy_semi_bold"
                app:backgroundTint="@color/teal_200"
                app:cornerRadius="20dp"
                viewModel="@{vm}"
                term="@{null}"
                android:layout_marginStart="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>